# Magnific

./: .env.example  .gitignore  conftest.py  deep_explore.py  deep_explore_schemas.py  deep_explore_v2.py  explore_api3.py  main.py  pyproject.toml  requirements.txt  test_concurrent.py  test_concurrent.sh
.pdca/: cloudinary-v2-plan.md
api/: server.py
api/middleware/: rate_limiter.py  (+1 more)
config/: __init__.py  constants.py  endpoints.py  user_agent.py
core/: __init__.py  asset_registry.py  auth.py  client.py  cloudinary_service.py  creation_registry.py  exceptions.py  monitor.py  poller.py  queue_manager.py  uploader.py
docs/: API.md  ARCHITECTURE.md  CLI.md  CONFIG.md  MODELS.md  README.md  SECURITY.md  retro-cycle-5-monitoring.md  retro-cycle-6-smart-queue-control.md  worklog.md
models/: __init__.py  base.py
test_results/: run_10_1780191692.json  run_12_1780191807.json  run_15_1780191923.json  run_20_1780192089.json  run_20_1780192094.json  run_7_1780191405.json  run_8_1780191473.json  run_9_1780191582.json
tests/: test_assets_routes.py  test_cloudinary.py  test_constants.py  test_cookie_parser.py  test_creation_registry.py  test_endpoints.py  test_exceptions.py  test_file_helpers.py  test_image_route.py  test_models.py  test_monitor_core.py  test_monitor_route.py  test_monitor_schemas.py  test_project_config.py  test_queue_integration.py  test_queue_manager.py  test_queue_routes.py  test_queue_schemas.py  test_retry.py  test_server_features.py  test_validation.py  test_video_route.py
utils/: __init__.py  cookie_parser.py  file_helpers.py  logger.py  retry.py
(+41 files in other folders)
