[project]
name = "magnific-api"
version = "1.0.0"
description = "Local API proxy for Freepik/Magnific AI generation (images & videos)"
requires-python = ">=3.10"
dependencies = [
    "curl_cffi>=0.7.0",
    "fastapi>=0.110.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "starlette[full]>=0.36.0",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"
testpaths = ["tests"]
python_files = ["test_*.py"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
